2003-12-31 01:07  Alexander Malmberg <alexander@malmberg.org>

	* KeyBindings/DefaultKeyBindings.dict: Uncomment the
	moveUpAndModifySelection: and moveDownAndModifySelection:
	entries.

2003-12-31 00:37  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m (-setSelectedRange:affinity:stillSelecting:):
	Make sure oldRange is always initialized.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBundleAdditions.m (-pathForNibResource:) ignore
	extension "nib", so "gorm" or "gmodel" get used instead.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSAffineTransform.h: Corrected element names tX
	and TY of structure NSAffineTransformStruct to fit Cocoa naming.
	* Source/NSAffineTransform.m
	* Source/NSView.m (-_rebuildCoordinates)
	* Source/NSPrintOperation.m (-_displayPageInRect:atPlacement:withInfo:)
	Adopted to change of NSAffineTransformStruct elements.
	* Source/Function.m
	Implemented NSDrawWindowBackground(), NSDrawDarkBezel() and
	NSDrawLightBezel().
	* Source/NSTableHeaderView.m (-drawRect:) Use NSDrawTiledRects()
	instead of DPS operations.
	

2003-12-30 00:48  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: Added private class to collect
	top level items (controllers) which are instantiated in the
	.gorm file.  This and the change to GSNibContainer provide a
	much cleaner way of retaining the top level items in the .gorm
	file without requiring a new special entry in the nameTable.
	* Source/GSNibContainer.[hm]: Renamed method awakeWithContext:
	to awakeWithContext:topLevelItems: to allow passing in the
	items collected.  Also added code to add the GSNibItems which
	are in the archive to the instance of the private class which
	is created.
	
2003-12-29 20:43  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: removed extraneous retain in
	GSClassSwapper which was causing the retain counts of
	custom classes to be one too many. 
